# a-map

./: .eslintrc.base.json  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci-js.yml  ci-python.yml
apps/api/: .eslintrc.json  package.json
apps/cli/: package.json
apps/cli/src/: index.ts
apps/cli/src/commands/: issue.ts  keygen.ts  verify.ts
apps/dashboard/: README.md  package.json
apps/registry/: package.json
apps/registry/src/: index.test.ts  index.ts
examples/: README.md
examples/1-hop/: _helpers.ts  a-permission-blocking.ts  b-prompt-injection.ts  c-developer-guardrails.ts  d-multi-hop.ts  demo.ts
examples/a2a/: demo.ts  orchestrator.ts  shared.ts  worker.ts
examples/mcp-server/: package.json  server.ts
sdks/python/: README.md  pyproject.toml
sdks/python/src/amap/: __init__.py
sdks/typescript/core/: .eslintrc.json  .npmignore  README.md  package.json  tsconfig.json
sdks/typescript/core/src/: amap.contract.test.ts  index.ts  offline.test.ts
sdks/typescript/mcp/: README.md  package.json
sdks/typescript/mcp/src/: guard.test.ts  guard.ts  index.ts  protect.test.ts  protect.ts
sdks/typescript/middleware/: README.md  package.json
sdks/typescript/middleware/src/: express.test.ts  express.ts  fetch-guard.test.ts  fetch-guard.ts  hono.ts  index.ts
sdks/typescript/openclaw/: Makefile  README.md  openclaw.plugin.json  package.json
sdks/typescript/react/: package.json
spec/: agent-json.example.json  agent-json.schema.json
(+64 files in other folders)
